<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2025, WSO2 LLC. (http://www.wso2.com).
  ~
  ~ WSO2 LLC. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.wso2</groupId>
        <artifactId>wso2</artifactId>
        <version>1.4</version>
    </parent>

    <groupId>org.wso2.carbon.identity.workflow</groupId>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>identity-workflow</artifactId>
    <version>1.0.20-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WSO2 Carbon - Identity Workflow</name>
    <description>
    </description>
    <url>http://wso2.org</url>

    <scm>
        <url>https://github.com/wso2-extensions/identity-workflow.git</url>
        <developerConnection>scm:git:https://github.com/wso2-extensions/identity-workflow.git
        </developerConnection>
        <connection>scm:git:https://github.com/wso2-extensions/identity-workflow.git</connection>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>components/org.wso2.carbon.identity.workflow.engine</module>
        <module>features/org.wso2.carbon.identity.workflow.engine.server.feature</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <obrRepository>NONE</obrRepository>
                    <instructions>
                        <SCM-Revision>${buildNumber}</SCM-Revision>
                    </instructions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyleplugin.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>
                                https://raw.githubusercontent.com/wso2/code-quality-tools/v1.3/checkstyle/checkstyle.xml
                            </configLocation>
                            <suppressionsLocation>
                                https://raw.githubusercontent.com/wso2/code-quality-tools/v1.3/checkstyle/suppressions.xml
                            </suppressionsLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>${maven.buildnumber.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <!--This parameter disables doclint-->
                            <doclint>none</doclint>
                            <quiet>true</quiet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>org.wso2.carbon.identity.role.v2.mgt.core</artifactId>
                <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>org.wso2.carbon.identity.core</artifactId>
                <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>org.wso2.carbon.user.mgt.common</artifactId>
                <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>org.wso2.carbon.identity.workflow.mgt</artifactId>
                <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.organization.management</groupId>
                <artifactId>org.wso2.carbon.identity.organization.management.organization.user.sharing</artifactId>
                <version>${org.wso2.identity.organization.mgt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.workflow</groupId>
                <artifactId>org.wso2.carbon.identity.workflow.engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.workflow</groupId>
                <artifactId>org.wso2.carbon.identity.workflow.engineserver.feature</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon</groupId>
                <artifactId>org.wso2.carbon.utils</artifactId>
                <version>${org.wso2.carbon.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
                <version>${apache.felix.scr.ds.annotations.version}</version>
            </dependency>
                <dependency>
                    <groupId>org.wso2.carbon.identity.framework</groupId>
                    <artifactId>org.wso2.carbon.user.mgt</artifactId>
                    <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>identity-framework</artifactId>
                <version>${carbon.identity.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.identity.framework</groupId>
                <artifactId>org.wso2.carbon.identity.testutil</artifactId>
                <version>${carbon.identity.framework.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <scope>test</scope>
                <version>${h2database.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <carbon.p2.plugin.version>5.1.2</carbon.p2.plugin.version>
        <maven.buildnumber.plugin.version>1.4</maven.buildnumber.plugin.version>
        <maven.checkstyleplugin.version>3.1.0</maven.checkstyleplugin.version>
        <maven.findbugsplugin.version>3.0.5</maven.findbugsplugin.version>
        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
        <apache.felix.scr.ds.annotations.version>1.2.8</apache.felix.scr.ds.annotations.version>
        <carbon.identity.framework.version>7.8.539</carbon.identity.framework.version>
        <testng.version>7.4.0</testng.version>
        <mockito.version>3.2.4</mockito.version>
        <h2database.version>2.1.210</h2database.version>
        <org.wso2.carbon.framework.version>4.10.34</org.wso2.carbon.framework.version>
        <osgi.framework.import.version.range>[1.2.0, 2.0.0)</osgi.framework.import.version.range>
        <osgi.service.component.import.version.range>[1.2.0, 2.0.0)</osgi.service.component.import.version.range>
        <carbon.identity.package.import.version.range>[7.5.0, 8.0.0)</carbon.identity.package.import.version.range>
        <org.wso2.identity.organization.mgt.version>2.0.3</org.wso2.identity.organization.mgt.version>
        <org.wso2.identity.organization.mgt.import.version.range>[1.0.0,3.0.0)
        </org.wso2.identity.organization.mgt.import.version.range>
        <carbon.kernel.package.import.version.range>[4.7.0, 5.0.0)</carbon.kernel.package.import.version.range>
        <carbon.user.api.imp.pkg.version.range>[1.0.1, 2.0.0)</carbon.user.api.imp.pkg.version.range>
        <org.wso2.carbon.database.utils.version.range>[2.2.0, 2.5.0)</org.wso2.carbon.database.utils.version.range>
    </properties>

</project>
